SUBDIRS = cmd edit

.PHONY: help todo stats splint

todo::
	@find . \( -name "*.c" -o -name "*.h" \) -exec grep -Hno "@todo .*" {} \; | sed "s/@todo/error:/"
	@find . \( -name "*.c" -o -name "*.h" \) -exec grep -Hno "@idea .*" {} \; | sed "s/@idea/warning:/"

stats::
	@find . \( -name "*.c" -o -name "*.h" \) -printf "%s %p\n" | sort -n

splint::
	for dir in $(SRCDIRS); do $(MAKE) -C $$dir splint ; done

help::
	@echo "make todo                    -- generate a list of TODO items in the form of gcc error/warnings"
	@echo "make stats                   -- run source code stats"
	@echo "make splint                  -- run splint source code checks"
